.antlr/p4_grammarParser.java
// Generated from /Users/aatishvarma/School/P4/bug-finder/p4_grammar.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class p4_grammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		IDENTIFIER=39, APPLY=40, KEY=41, ACTIONS=42, STATE=43, ENTRIES=44, TYPE=45, 
		TYPE_IDENTIFIER=46, IN=47, OUT=48, INOUT=49, PACKAGE=50, PARSER=51, TRANSITION=52, 
		SELECT=53, DEFAULT=54, DONTCARE=55, MASK=56, RANGE=57, VALUESET=58, CONTROL=59, 
		EXTERN=60, TUPLE=61, BOOL=62, ERROR=63, INT=64, BIT=65, INTEGER=66, VARBIT=67, 
		VOID=68, COMMA=69, HEADER=70, HEADER_UNION=71, STRUCT=72, ENUM=73, MATCH_KIND=74, 
		TYPEDEF=75, RETURN=76, EXIT=77, IF=78, ELSE=79, SWITCH=80, TABLE=81, CONST=82, 
		ACTION=83, ABSTRACT=84, FALSE=85, PRAGMA=86, THIS=87, TRUE=88, STRING_LITERAL=89, 
		UNKNOWN_TOKEN=90, SHL=91, LE=92, GE=93, NE=94, EQ=95, PP=96, AND=97, OR=98;
	public static final int
		RULE_p4program = 0, RULE_declaration = 1, RULE_nonTypeName = 2, RULE_name = 3, 
		RULE_nonTableKwName = 4, RULE_optAnnotations = 5, RULE_annotations = 6, 
		RULE_annotation = 7, RULE_parameterList = 8, RULE_nonEmptyParameterList = 9, 
		RULE_parameter = 10, RULE_direction = 11, RULE_packageTypeDeclaration = 12, 
		RULE_instantiation = 13, RULE_optConstructorParameters = 14, RULE_dotPrefix = 15, 
		RULE_parserDeclaration = 16, RULE_parserLocalElements = 17, RULE_parserLocalElement = 18, 
		RULE_parserTypeDeclaration = 19, RULE_parserStates = 20, RULE_parserState = 21, 
		RULE_parserStatements = 22, RULE_parserStatement = 23, RULE_parserBlockStatement = 24, 
		RULE_transitionStatement = 25, RULE_stateExpression = 26, RULE_selectExpression = 27, 
		RULE_selectCaseList = 28, RULE_selectCase = 29, RULE_keysetExpression = 30, 
		RULE_tupleKeysetExpression = 31, RULE_simpleExpressionList = 32, RULE_simpleKeysetExpression = 33, 
		RULE_valueSetDeclaration = 34, RULE_controlDeclaration = 35, RULE_controlTypeDeclaration = 36, 
		RULE_controlLocalDeclarations = 37, RULE_controlLocalDeclaration = 38, 
		RULE_controlBody = 39, RULE_externDeclaration = 40, RULE_methodPrototypes = 41, 
		RULE_functionPrototype = 42, RULE_methodPrototype = 43, RULE_typeRef = 44, 
		RULE_namedType = 45, RULE_prefixedType = 46, RULE_typeName = 47, RULE_tupleType = 48, 
		RULE_headerStackType = 49, RULE_specializedType = 50, RULE_baseType = 51, 
		RULE_typeOrVoid = 52, RULE_optTypeParameters = 53, RULE_typeParameterList = 54, 
		RULE_realTypeArg = 55, RULE_typeArg = 56, RULE_realTypeArgumentList = 57, 
		RULE_typeArgumentList = 58, RULE_typeDeclaration = 59, RULE_derivedTypeDeclaration = 60, 
		RULE_headerTypeDeclaration = 61, RULE_headerUnionDeclaration = 62, RULE_structTypeDeclaration = 63, 
		RULE_structFieldList = 64, RULE_structField = 65, RULE_enumDeclaration = 66, 
		RULE_errorDeclaration = 67, RULE_matchKindDeclaration = 68, RULE_identifierList = 69, 
		RULE_specifiedIdentifierList = 70, RULE_specifiedIdentifier = 71, RULE_typedefDeclaration = 72, 
		RULE_assignmentOrMethodCallStatement = 73, RULE_emptyStatement = 74, RULE_returnStatement = 75, 
		RULE_exitStatement = 76, RULE_conditionalStatement = 77, RULE_directApplication = 78, 
		RULE_statement = 79, RULE_blockStatement = 80, RULE_statOrDeclList = 81, 
		RULE_switchStatement = 82, RULE_switchCases = 83, RULE_switchCase = 84, 
		RULE_switchLabel = 85, RULE_statementOrDeclaration = 86, RULE_tableDeclaration = 87, 
		RULE_tablePropertyList = 88, RULE_tableProperty = 89, RULE_keyElementList = 90, 
		RULE_keyElement = 91, RULE_actionList = 92, RULE_entriesList = 93, RULE_entry = 94, 
		RULE_actionRef = 95, RULE_actionDeclaration = 96, RULE_variableDeclaration = 97, 
		RULE_constantDeclaration = 98, RULE_optInitializer = 99, RULE_initializer = 100, 
		RULE_functionDeclaration = 101, RULE_argumentList = 102, RULE_nonEmptyArgList = 103, 
		RULE_argument = 104, RULE_expressionList = 105, RULE_annotationBody = 106, 
		RULE_annotationToken = 107, RULE_member = 108, RULE_prefixedNonTypeName = 109, 
		RULE_lvalue = 110, RULE_expression = 111;
	public static final String[] ruleNames = {
		"p4program", "declaration", "nonTypeName", "name", "nonTableKwName", "optAnnotations", 
		"annotations", "annotation", "parameterList", "nonEmptyParameterList", 
		"parameter", "direction", "packageTypeDeclaration", "instantiation", "optConstructorParameters", 
		"dotPrefix", "parserDeclaration", "parserLocalElements", "parserLocalElement", 
		"parserTypeDeclaration", "parserStates", "parserState", "parserStatements", 
		"parserStatement", "parserBlockStatement", "transitionStatement", "stateExpression", 
		"selectExpression", "selectCaseList", "selectCase", "keysetExpression", 
		"tupleKeysetExpression", "simpleExpressionList", "simpleKeysetExpression", 
		"valueSetDeclaration", "controlDeclaration", "controlTypeDeclaration", 
		"controlLocalDeclarations", "controlLocalDeclaration", "controlBody", 
		"externDeclaration", "methodPrototypes", "functionPrototype", "methodPrototype", 
		"typeRef", "namedType", "prefixedType", "typeName", "tupleType", "headerStackType", 
		"specializedType", "baseType", "typeOrVoid", "optTypeParameters", "typeParameterList", 
		"realTypeArg", "typeArg", "realTypeArgumentList", "typeArgumentList", 
		"typeDeclaration", "derivedTypeDeclaration", "headerTypeDeclaration", 
		"headerUnionDeclaration", "structTypeDeclaration", "structFieldList", 
		"structField", "enumDeclaration", "errorDeclaration", "matchKindDeclaration", 
		"identifierList", "specifiedIdentifierList", "specifiedIdentifier", "typedefDeclaration", 
		"assignmentOrMethodCallStatement", "emptyStatement", "returnStatement", 
		"exitStatement", "conditionalStatement", "directApplication", "statement", 
		"blockStatement", "statOrDeclList", "switchStatement", "switchCases", 
		"switchCase", "switchLabel", "statementOrDeclaration", "tableDeclaration", 
		"tablePropertyList", "tableProperty", "keyElementList", "keyElement", 
		"actionList", "entriesList", "entry", "actionRef", "actionDeclaration", 
		"variableDeclaration", "constantDeclaration", "optInitializer", "initializer", 
		"functionDeclaration", "argumentList", "nonEmptyArgList", "argument", 
		"expressionList", "annotationBody", "annotationToken", "member", "prefixedNonTypeName", 
		"lvalue", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'@'", "'('", "')'", "','", "'='", "'.'", "'{'", "'}'", "':'", 
		"'<'", "'>'", "'['", "']'", "'_'", "'&&&'", "'..'", "'<<'", "'&&'", "'||'", 
		"'=='", "'!='", "'>='", "'<='", "'++'", "'+'", "'|+|'", "'-'", "'|-|'", 
		"'*'", "'/'", "'%'", "'|'", "'&'", "'^'", "'~'", "'!'", "'?'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "IDENTIFIER", "APPLY", "KEY", "ACTIONS", "STATE", "ENTRIES", 
		"TYPE", "TYPE_IDENTIFIER", "IN", "OUT", "INOUT", "PACKAGE", "PARSER", 
		"TRANSITION", "SELECT", "DEFAULT", "DONTCARE", "MASK", "RANGE", "VALUESET", 
		"CONTROL", "EXTERN", "TUPLE", "BOOL", "ERROR", "INT", "BIT", "INTEGER", 
		"VARBIT", "VOID", "COMMA", "HEADER", "HEADER_UNION", "STRUCT", "ENUM", 
		"MATCH_KIND", "TYPEDEF", "RETURN", "EXIT", "IF", "ELSE", "SWITCH", "TABLE", 
		"CONST", "ACTION", "ABSTRACT", "FALSE", "PRAGMA", "THIS", "TRUE", "STRING_LITERAL", 
		"UNKNOWN_TOKEN", "SHL", "LE", "GE", "NE", "EQ", "PP", "AND", "OR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "p4_grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public p4_grammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class P4programContext extends ParserRuleContext {
		public P4programContext p4program() {
			return getRuleContext(P4programContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public P4programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p4program; }
	}

	public final P4programContext p4program() throws RecognitionException {
		return p4program(0);
	}

	private P4programContext p4program(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		P4programContext _localctx = new P4programContext(_ctx, _parentState);
		P4programContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_p4program, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(231);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(229);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new P4programContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_p4program);
						setState(225);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(226);
						declaration();
						}
						break;
					case 2:
						{
						_localctx = new P4programContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_p4program);
						setState(227);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(228);
						match(T__0);
						}
						break;
					}
					} 
				}
				setState(233);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ConstantDeclarationContext constantDeclaration() {
			return getRuleContext(ConstantDeclarationContext.class,0);
		}
		public ExternDeclarationContext externDeclaration() {
			return getRuleContext(ExternDeclarationContext.class,0);
		}
		public ActionDeclarationContext actionDeclaration() {
			return getRuleContext(ActionDeclarationContext.class,0);
		}
		public ParserDeclarationContext parserDeclaration() {
			return getRuleContext(ParserDeclarationContext.class,0);
		}
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public ControlDeclarationContext controlDeclaration() {
			return getRuleContext(ControlDeclarationContext.class,0);
		}
		public InstantiationContext instantiation() {
			return getRuleContext(InstantiationContext.class,0);
		}
		public ErrorDeclarationContext errorDeclaration() {
			return getRuleContext(ErrorDeclarationContext.class,0);
		}
		public MatchKindDeclarationContext matchKindDeclaration() {
			return getRuleContext(MatchKindDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(244);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(234);
				constantDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(235);
				externDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(236);
				actionDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(237);
				parserDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(238);
				typeDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(239);
				controlDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(240);
				instantiation();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(241);
				errorDeclaration();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(242);
				matchKindDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(243);
				functionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonTypeNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(p4_grammarParser.IDENTIFIER, 0); }
		public TerminalNode APPLY() { return getToken(p4_grammarParser.APPLY, 0); }
		public TerminalNode KEY() { return getToken(p4_grammarParser.KEY, 0); }
		public TerminalNode ACTIONS() { return getToken(p4_grammarParser.ACTIONS, 0); }
		public TerminalNode STATE() { return getToken(p4_grammarParser.STATE, 0); }
		public TerminalNode ENTRIES() { return getToken(p4_grammarParser.ENTRIES, 0); }
		public TerminalNode TYPE() { return getToken(p4_grammarParser.TYPE, 0); }
		public NonTypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTypeName; }
	}

	public final NonTypeNameContext nonTypeName() throws RecognitionException {
		NonTypeNameContext _localctx = new NonTypeNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nonTypeName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(246);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << APPLY) | (1L << KEY) | (1L << ACTIONS) | (1L << STATE) | (1L << ENTRIES) | (1L << TYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public NonTypeNameContext nonTypeName() {
			return getRuleContext(NonTypeNameContext.class,0);
		}
		public TerminalNode TYPE_IDENTIFIER() { return getToken(p4_grammarParser.TYPE_IDENTIFIER, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
	}
